fix(ScoreLevel): add text-wrap and break to p

--- a/src/components/UI/molecules/ScoreLevel/ScoreLevel.module.scss
+++ b/src/components/UI/molecules/ScoreLevel/ScoreLevel.module.scss
@@ -21,9 +21,12 @@
       background-color: #f4f4fa;
     }
   }
-  > p {
+  &__p {
     font-size: 14px;
     margin: 5px 0;
+    max-width: 1fr;
+    text-wrap: balance;
+    word-break: break-word;
   }
 
   &__summary {
